--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "moonChat.js",
-  "version": "1.0.3",
+  "version": "1.2.3",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "socket.io-client": "^3.0.3"
+    "socket.io-client": "^3.0.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
