--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "moonChat.js",
+  "name": "moonchat.js",
   "version": "1.3.5",
-  "description": "",
+  "description": "Node.js library for moonChat.",
   "main": "index.js",
   "dependencies": {
-    "socket.io-client": "^3.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io-client": "^3.0.3"
   },
   "devDependencies": {},
   "scripts": {
@@ -13,5 +13,13 @@
   },
   "keywords": [],
   "author": "Atlas <atlas@twplayer.co> (https://chat.twplayer.co)",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Atlas7005/moonChat.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Atlas7005/moonChat.js/issues"
+  },
+  "homepage": "https://github.com/Atlas7005/moonChat.js#readme"
 }
