--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "moonchat.js",
-  "version": "1.7.10",
+  "version": "2.0.0",
   "description": "Node.js library for moonChat.",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.2",
     "socket.io-client": "^3.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "socket",
